--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,7 @@
               "projects/ngx-ui-doc/src/assets"
             ],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "projects/ngx-ui/src/themes/default.scss",
               "projects/ngx-ui-doc/src/styles.scss"
             ],
