--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
-  "name": "ngx-ui",
-  "version": "0.0.0",
+  "name": "@ssougnez/ngx-ui",
+  "version": "0.1.0",
+  "description": "Flexible and customizable graphical library for Angular",
+  "author": "Sébastien Sougnez",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ssougnez/ngx-ui"
+  },
+  "bugs": {
+    "url": "https://github.com/ssougnez/ngx-ui/issues"
+  },
+  "homepage": "https://github.com/ssougnez/ngx-ui",
+  "keywords": [ "angular", "ngx-ui" ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +19,6 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0-",
     "@angular/common": "~12.1.0-",
