--- a/projects/ngx-ui/package.json
+++ b/projects/ngx-ui/package.json
@@ -1,6 +1,18 @@
 {
-  "name": "ngx-ui",
-  "version": "0.0.1",
+  "name": "@ssougnez/ngx-ui",
+  "version": "0.1.0",
+  "description": "Flexible and customizable graphical library for Angular",
+  "author": "Sébastien Sougnez",
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ssougnez/ngx-ui"
+  },
+  "bugs": {
+    "url": "https://github.com/ssougnez/ngx-ui/issues"
+  },
+  "homepage": "https://github.com/ssougnez/ngx-ui",
+  "keywords": [ "angular", "ngx-ui" ],
   "peerDependencies": {
     "@angular/common": "^12.1.0-",
     "@angular/core": "^12.1.0-"
