--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "url": "https://github.com/ssougnez/ngx-ui/issues"
   },
   "homepage": "https://github.com/ssougnez/ngx-ui",
-  "keywords": [ "angular", "ngx-ui" ],
+  "keywords": [
+    "angular",
+    "ngx-ui"
+  ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "package": "ng build ngx-ui --prod && ncp ./projects/ngx-ui/src/themes ./dist/ngx-ui/themes && cd dist/ngx-ui"
   },
   "dependencies": {
     "@angular/animations": "~12.1.0-",
@@ -45,6 +49,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ncp": "^2.0.0",
     "ng-packagr": "^12.1.0",
     "typescript": "~4.3.2"
   }
